Connect React frontend to backend, TMDB, favorites, and Google OAuth

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,3 @@
 VITE_TMDB_API_KEY=fc9b5783e517d473a2db9d2938a749fd
+VITE_API_BASE_URL=http://localhost:5050
+VITE_GOOGLE_CLIENT_ID=922017013616-m1gr7p3cl72o0og3tkqr5p0m81g0ebm8.apps.googleusercontent.com
