--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -24,3 +24,10 @@ dist-ssr
 *.sw?
 frontend/.env
 backend/.env
+
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+/playwright/.auth/
